--- a/src/layouts/mainLayout/MainLayout.module.css
+++ b/src/layouts/mainLayout/MainLayout.module.css
@@ -1,21 +1,16 @@
-.wrap {
+.Wrap {
     display: flex;
     flex-direction: column;
     width: 100%;
-
+    height: 100vh;
     background: blue;
 }
 
-
-.menu{
+.Content {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-
-
-.content{
-    display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background: blue;
+    height: 100%;
 }
