--- a/src/pages/playersPage/PlayersPage.module.css
+++ b/src/pages/playersPage/PlayersPage.module.css
@@ -1,16 +1,16 @@
-.Wrap{
+.Wrap {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-.PlayersList{
+.PlayersList {
     width: 20%;
     background: blanchedalmond;
     height: 100%;
 }
 
-.InfoBlock{
+.InfoBlock {
     width: 80%;
     background: lightblue;
 }
@@ -24,7 +24,7 @@
     width: 100%;
 }
 
-.NamePlayerForm{
+.NamePlayerForm {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +32,7 @@
     height: 100%;
 }
 
-.PlayerForm{
+.PlayerForm {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,13 +40,24 @@
     height: 100%;
 }
 
-.AboutPlayer{
+.AboutPlayer {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.FullInfo{
+.FullInfo {
     display: flex;
     flex-direction: row;
+}
+
+.PhotoSection {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.PhotoSectionHeader {
+    display: flex;
+    justify-content: center;
 }
